--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,38 @@ body {
   font-weight: 700;
 }
 
+.dropbtn {
+  cursor: pointer;
+  border: none;
+  text-decoration: none;
+  margin-left: 40px;
+  color: gray;
+  font-size: 15px;
+  background-color: transparent;
+}
+
+.dropdown {
+  background-color: transparent;
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  margin-left: 40px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  margin: 0 !important;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
 .navBar ul {
   list-style-type: none;
   display: flex;
@@ -36,6 +68,9 @@ body {
   font-size: 15px;
 }
 
+.dropdown-content a:hover { background-color: #ddd; }
+.dropdown:hover .dropdown-content { display: block; }
+
 .navBar ul a:hover {
   color: black;
 }
@@ -45,6 +80,19 @@ input {
   border: 1px solid rgb(197, 197, 197);
   border-radius: 5px;
   width: 100%;
+}
+
+select {
+  padding: 13px;
+  border: 1px solid rgb(197, 197, 197);
+  border-radius: 5px;
+  width: 100%;
+  margin-right: 10px;
+  outline: none;
+}
+
+select:focus {
+  border: 1px solid #0290ff;
 }
 
 .AddForm input {
@@ -255,6 +303,11 @@ input:focus {
     text-align: center;
   }
 
+  .dropdown-content a {
+    margin: 0 !important;
+    padding: 12px 16px !important;
+  }
+
   .navBar ul {
     padding: 0;
     margin-bottom: 20px;
@@ -280,9 +333,16 @@ input:focus {
 
   .AddForm input {
     margin-bottom: 10px;
+    width: auto;
+  }
+
+  select {
+    margin-bottom: 10px;
+    width: auto;
   }
 
   .submit-btn {
     padding: 10px;
+    width: 50%;
   }
 }
